<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Meal</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="categories">categories</string>
    <string name="idCategory">idCategory</string>
    <string name="strCategory">strCategory</string>
    <string name="strCategoryThumb">strCategoryThumb</string>
    <string name="strCategoryDescription">strCategoryDescription</string>
    <string name="MealInfo">Meal Info</string>
    <string name="ok">OK</string>
    <string name="pleasecheckyourconnection">please check your connection</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="enterproperemail">enter proper email</string>
    <string name="enterpassword">enter password</string>
    <string name="enterpass">enter password</string>
    <string name="passwordminimumlengthis61">password minimum length is 6</string>
    <string name="Entervaliddetails">Enter valid details</string>
    <string name="MealInfo1">Meal Info</string>
    <string name="pleasecheckyourconnection1">please check your connection</string>
    <string name="okk" tools:ignore="ButtonCase">OK</string>
    <string name="name2">name</string>
    <string name="data3">data</string>
    <string name="data2">data</string>
    <string name="data1">data</string>
    <string name="Pleaseenteremail">Please enter email....</string>
    <string name="Enteremailandpassword">Enter email and password!!</string>
    <string name="Pleaseenterpassword">Please enter password..</string>
    <string name="passwordminimumlengthis6">password minimum length is 6</string>
    <string name="signupsuccessfull">sign up successful</string>
    <string name="Error">Error!!</string>
    <string name="log_in">Log in</string>
    <string name="enteremail">Enter Email:</string>
    <string name="password1">Password:</string>
    <string name="login">Login</string>
    <string name="new_user">New User ?</string>
    <string name="signup1">Signup</string>
    <string name="name1">Name:</string>
    <string name="description">Description:</string>
    <string name="enter_email">Enter Email:</string>
    <string name="password">Password:</string>
    <string name="signup">Signup</string>
    <string name="recipes">Recipes</string>
    <string name="meals">Meals</string>
    <string name="favourite">Favourite</string>
    <string name="log_out">Log out</string>
    <string name="cimage">image</string>
    <string name="simage">image</string>
    <string name="delete">deleted successfully</string>
</resources>
