<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4E4C4C"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height"
                        android:id="@+id/image"
                        android:scaleType="centerCrop"

                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/cimage" />
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name1"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/size2"
                    android:textStyle="italic"
                    />


                <TextView
                    android:id="@+id/tname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color"
                    android:textStyle="italic"

                    />
                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mfav"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/view"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tdesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color"
                    android:textStyle="italic" />
            </LinearLayout>



    </ScrollView>
